@@ -20,4 +20,4 @@ Export-Package: org.joda.time;version=2.2,
  org.joda.time.format;version=2.2,
  org.joda.time.tz;version=2.2
 Bundle-License: Apache 2.0
-Bundle-DocURL: http://joda-time.sourceforge.net/
+Bundle-DocURL: http://www.joda.org/joda-time/
