@@ -11,7 +11,7 @@
 <section name="Download and Installation">
 <p>
 To use Joda-Time you need to
-<a href="http://sourceforge.net/projects/joda-time/files/joda-time/">download the latest version</a>.
+<a href="download.html">download the latest version</a>.
 The download will contain the joda-time jar file.
 Once you add this to your classpath you will be able to use Joda-Time.
 </p>
