@@ -33,25 +33,25 @@ of restrictions. If the license cause you problems please contact the mailing li
 Incompatible changes since 0.99
 -------------------------------
 Deprecated methods removed.
-See http://joda-time.sourceforge.net/upgradeto099.html for 0.98 to 0.99 changes
+See http://www.joda.org/joda-time/upgradeto099.html for 0.98 to 0.99 changes
 
 
 Deprecations since 0.99
 -----------------------
 None
-See http://joda-time.sourceforge.net/upgradeto099.html for 0.98 to 0.99 changes
+See http://www.joda.org/joda-time/upgradeto099.html for 0.98 to 0.99 changes
 
 
 Bug fixes since 0.99
 --------------------
 None
-See http://joda-time.sourceforge.net/upgradeto099.html for 0.98 to 0.99 changes
+See http://www.joda.org/joda-time/upgradeto099.html for 0.98 to 0.99 changes
 
 
 Enhancements since 0.99
 -----------------------
 None
-See http://joda-time.sourceforge.net/upgradeto099.html for 0.98 to 0.99 changes
+See http://www.joda.org/joda-time/upgradeto099.html for 0.98 to 0.99 changes
 
 </source>
 </p>
