@@ -30,7 +30,7 @@ The intent is to make the code available to the Java community with the minimum
 of restrictions. If the license causes you problems please contact the mailing list.
 
 **  Please also check out our related projects   **
-** http://joda-time.sourceforge.net/related.html **
+** http://www.joda.org/joda-time/related.html **
 
 ********************************************************************
  The next release will probably be v2.0
