@@ -13,7 +13,7 @@ The intent is to make the code available to the Java community with the minimum
 of restrictions. If the license causes you problems please contact the mailing list.
 
 **  Please also check out our related projects   **
-** http://joda-time.sourceforge.net/related.html **
+** http://www.joda.org/joda-time/related.html **
 
 
 Enhancements since 2.2
@@ -34,6 +34,9 @@ Enhancements since 2.2
 
 - Add LocalDateTime.toDate(TimeZone) [#48]
   Provides an alternate way to create a java.util.Date that avoids some synchronization
+
+- Home page moved
+  http://www.joda.org/joda-time
 
 
 Compatibility with 2.2
